<resources>
    <string name="app_name">NoteApp</string>
    <string name="no_data">No Notes</string>

    <string name="note_title_hint">Please enter a note title</string>
    <string name="note_description_hint">Please enter a note description</string>
    <string name="note_image_hint">Please enter an image url (optional)</string>
    <string name="note_button">Add New Note</string>
    <string name="note_delete_button">Delete</string>
    <string name="note_update_button">Save</string>
    <string name="note_date_created">Created: %1$s</string>
    <string name="note_date_updated">Updated: %1$s</string>



</resources>