<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="noteDataItem"
            type="com.task.noteapp.ui.notes.NoteDataItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/padding_large"
        android:background="@color/white">

        <TextView
            android:id="@+id/noteCreated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={noteDataItem.createDate}"
            android:textColorHint="@color/cardview_dark_background"
            android:textColor="@color/cardview_dark_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/noteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_title_hint"
            android:text="@={noteDataItem.title}"
            android:textColorHint="@color/cardview_dark_background"
            android:textColor="@color/cardview_dark_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noteCreated" />

        <EditText
            android:id="@+id/noteDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColorHint="@color/cardview_dark_background"
            android:textColor="@color/cardview_dark_background"
            android:hint="@string/note_description_hint"
            android:text="@={noteDataItem.description}"
            android:lines="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noteTitle" />

        <Button
            android:id="@+id/buttonUpdateNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_medium"
            android:text="@string/note_update_button"
            app:layout_constraintEnd_toStartOf="@+id/buttonDeleteNote"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noteDescription"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/buttonDeleteNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_medium"
            android:text="@string/note_delete_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonUpdateNote"
            app:layout_constraintTop_toBottomOf="@+id/noteDescription"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
